# oenothera

./: .gitignore  README.md  pyproject.toml
src/: audioProcessor.py  dataset.py  duration.py  hparams.py  inference.py  main.py  model.py  text.py  train.py
